--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,35 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    services:
+      # Label used to access the service container
+      postgres: 
+        # Docker Hub image
+        image: post
+        # Provide the password for postgres
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: simple_bank
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+
+
+
+
+
+
+
+
+
+
+
+
     steps:
     - uses: actions/checkout@v3
 
@@ -22,6 +51,7 @@ jobs:
         go-version: 1.19
 
    
-
+    - name: Run migration 
+      run : migrate -path ./db/migration -database "postgres://postgres:postgres@localhost:5435/simple_bank?sslmode=disable" up 
     - name: Test
       run: go test -v ./...
