--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,12 @@ jobs:
       with:
         go-version: 1.19
 
+
+    - name:  Install migrate 
+      run : |
+       $ curl -L https://github.com/golang-migrate/migrate/releases/download/v4.16.2/migrate.darwin-amd64.tar.gz | tar xvz
+       sudo mv migrate.linux-amd64 /usr/bin
+       which migrate
    
     - name: Run migration 
       run : migrate -path ./db/migration -database "postgres://postgres:postgres@localhost:5435/simple_bank?sslmode=disable" up 
