--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,12 +23,17 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: simple_bank
-        # Set health checks to wait until postgres has started
+        ports:
+          # Maps tcp port 5432 on service container to the host
+          - 5435:5432
+        
+          # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+
 
 
 
@@ -54,7 +59,7 @@ jobs:
     - name:  Install migrate 
       run : |
         curl -L https://github.com/golang-migrate/migrate/releases/download/v4.16.2/migrate.darwin-amd64.tar.gz | tar xvz
-        sudo mv migrate.linux-amd64 /usr/bin/migrate
+        sudo mv migrate.darwin-amd64 /usr/bin/migrate
         which migrate
    
     - name: Run migration 
